fix: width fixed for better alignment in mobiles

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 #text-input {
     display: block;
     height: 20vh;
-    width: 600px;
+    width: 70%;
     margin: auto;
     margin-top: 2rem;
     padding: 1rem 1rem;
@@ -39,12 +39,12 @@ body {
 }
 
 .centered-container {
-    max-width: 600px;
+    width: 70%;
     margin: auto;
 }
 
 #output {
-    max-width: 600px;
+    width: 70%;
     margin: auto;
     margin-top: 0.5rem;
     margin-bottom: 1.5rem;
